Add changes to css and index

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web);
+@import url(https://fonts.googleapis.com/css?family=Space+Mono);
 
 *{
 	padding:0;
@@ -6,39 +6,80 @@
 }
 
 body{
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Space Mono', monospace;
 	font-size: 100%;
 	background:#f8f8f8;
+    font-color: 000000;
 }
 
 a{
 	text-decoration: none;
-	color:#666;
+	color:#000000;
 }
 	a:hover{
 		color:#999;
 	}
 p{
 	line-height: 2em;
+
 	margin:0 0 20px;
 	text-align: center;
 }
 
 .wrap{
 	max-width: 600px;
+    font-size: 1.75em;
 	margin:150px auto;
+    text-align: center;
 }
 
 .type-wrap{
 	margin:10px auto;
-	padding:20px;
-	background:#f0f0f0;
-	border-radius:5px;
-	border:#CCC 1px solid;
+	padding:5px;
+	/*background:#f0f0f0; */
+	/*border-radius:5px;*/
+	/*border:#CCC 1px solid; */
 }
 
 .links{
 	margin:20px 0;
-	font-size: 0.75em;
+	font-size: 1.0em;
 	text-align: center;
 }
+
+
+/* code for animated blinking cursor */
+        .typed-cursor{
+            opacity: 1;
+            font-weight: 100;
+            -webkit-animation: blink 0.7s infinite;
+            -moz-animation: blink 0.7s infinite;
+            -ms-animation: blink 0.7s infinite;
+            -o-animation: blink 0.7s infinite;
+            animation: blink 0.7s infinite;
+        }
+        @-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-webkit-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-moz-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-ms-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-o-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
