--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 body{
     font-family: 'Space Mono', monospace;
 	font-size: 100%;
-	background:#f8f8f8;
+	background:#ffffff;
     font-color: 000000;
 }
 
